--- a/themeGen.conf
+++ b/themeGen.conf
@@ -10,7 +10,7 @@ photo_dir="$HOME/GoogleDrive/wallpapers/"
 
 # Background
 background_dir="/usr/share/backgrounds/";
-background_conf="$HOME/.cache/wal/themeGen-wallpaper.conf";
+background_conf="$HOME/.cache/wal/themeGen-wallpaper";
 
 # Window transparency
 alpha=70;
@@ -31,4 +31,4 @@ intellij_script="$HOME/.scripts/intellijPywalGen/intellijPywalGen.sh";
 # JetBrains IDE's configs
 idea_conf="$HOME/.IntelliJIdea2019.1/config";
 webstorm_conf="$HOME/.WebStorm2019.1/config";
-pycharm_conf="$HOME/.Pycharm2019.2/config";
+pycharm_conf="$HOME/.PyCharm2019.2/config";
