Setting up MacOS themeGen

--- a/linux/config/manjaro_i3_defaults.conf
+++ b/linux/config/manjaro_i3_defaults.conf
@@ -37,9 +37,9 @@ oomox_icons_script="/opt/oomox/plugins/icons_papirus/change_color.sh";
 intellij_script="${HOME}/.scripts/intellijPywalGen/intellijPywalGen.sh";
 
 ## JetBrains IDE's configs ##
-idea_config="${HOME}/.IntelliJIdea2019.1/config";
-webstorm_config="${HOME}/.WebStorm2019.1/config";
-pycharm_config="${HOME}/.PyCharm2019.2/config";
+idea_config="${HOME}/.IntelliJIdea<version>/config";
+webstorm_config="${HOME}/.WebStorm<version>/config";
+pycharm_config="${HOME}/.PyCharm<version>/config";
 
 ## Remote Desktop ##
-remote_host="Name of remote PC for ssh connection"
+remote_host="<Name of remote PC for ssh connection>"
